...
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingBottom="40dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/add_facility_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Facility Name"
        android:padding="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/add_facility_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:padding="20dp"
        android:hint="Facility Address"
...
