...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/headingBackground"
        app:layout_constraintBottom_toTopOf="@+id/organizer_event_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
...
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/button_add_organizer_event"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/appBackground"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
...
